@@ -1,30 +1,26 @@
-package demos.panamagl.macos.awt;
+package demos.panamagl.swing;
 
-//import static jdk.incubator.foreign.CLinker.C_FLOAT;
 import java.awt.BorderLayout;
-import java.awt.Frame;
-import java.awt.event.WindowAdapter;
-import java.awt.event.WindowEvent;
 import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.ValueLayout;
+import javax.swing.JFrame;
 import javax.swing.SwingUtilities;
-import opengl.macos.v10_15_7.glut_h;
 import panamagl.Animator;
 import panamagl.GLEventAdapter;
 import panamagl.canvas.GLCanvasSwing;
 import panamagl.factory.PanamaGLFactory;
 import panamagl.opengl.GL;
 import panamagl.opengl.GLError;
-import panamagl.os.macos.PanamaGLMacOSFactory;
 
 /**
- * VM ARGS : --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign
+ * VM ARGS : --enable-native-access=ALL-UNNAMED --enable-preview
  * -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
  * 
  * @author Martin
  *
  */
-public class DemoTeapot_Onscreen_macOS_AWT {
+public class DemoTeapot_Onscreen_Swing {
 
   public static void main(String[] args) throws Exception {
     System.out
@@ -34,21 +30,15 @@ public class DemoTeapot_Onscreen_macOS_AWT {
     GLEventAdapter listener = TeapotGLEventListener();
 
     // Using a panel to ensure that GL get initialized in the main AWT thread.
-    PanamaGLFactory factory = new PanamaGLMacOSFactory();
+    PanamaGLFactory factory = PanamaGLFactory.select();
     GLCanvasSwing panel = factory.newCanvasSwing();
     panel.setGLEventListener(listener);
 
     // Create frame
-    final Frame frame = new Frame(DemoTeapot_Onscreen_macOS_AWT.class.getSimpleName());
-    frame.setLayout(new BorderLayout());
+    final JFrame frame = new JFrame(DemoTeapot_Onscreen_Swing.class.getSimpleName());
+    frame.getContentPane().setLayout(new BorderLayout());
     frame.setBounds(0, 0, 800, 600);
-    frame.addWindowListener(new WindowAdapter() {
-      @Override
-      public void windowClosing(WindowEvent e) {
-        frame.dispose();
-        System.exit(0);
-      }
-    });
+    frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
 
     // Init action
     Runnable show = new Runnable() {
@@ -86,24 +76,26 @@ public class DemoTeapot_Onscreen_macOS_AWT {
     return new GLEventAdapter() {
 
       public void init(GL gl) {
+        // The segments created in this function will be destroyed
+        // one the below scope and allocator are collected by GC.
         MemorySession scope = MemorySession.openConfined();
         SegmentAllocator allocator = SegmentAllocator.newNativeArena(scope);
-        
+
         // Reset Background
-        gl.glClearColor(0f, 0f, 0f, 1f);
+        gl.glClearColor(1f, 1f, 1f, 1f);
 
         // Setup Lighting
         gl.glShadeModel(gl.GL_SMOOTH());
         
-        var pos = allocator.allocateArray(glut_h.C_FLOAT, new float[] {0.0f, 15.0f, -15.0f, 0});
+        var pos = allocator.allocateArray(ValueLayout.JAVA_FLOAT, new float[] {0.0f, 15.0f, -15.0f, 0});
         gl.glLightfv(gl.GL_LIGHT0(), gl.GL_POSITION(), pos);
         
-        var spec = allocator.allocateArray(glut_h.C_FLOAT, new float[] {1, 1, 1, 0});
+        var spec = allocator.allocateArray(ValueLayout.JAVA_FLOAT, new float[] {1, 1, 1, 0});
         gl.glLightfv(gl.GL_LIGHT0(), gl.GL_AMBIENT(), spec);
         gl.glLightfv(gl.GL_LIGHT0(), gl.GL_DIFFUSE(), spec);
         gl.glLightfv(gl.GL_LIGHT0(), gl.GL_SPECULAR(), spec);
         
-        var shini = allocator.allocate(glut_h.C_FLOAT, 113);
+        var shini = allocator.allocate(ValueLayout.JAVA_FLOAT, 113);
         gl.glMaterialfv(gl.GL_FRONT(), gl.GL_SHININESS(), shini);
         gl.glEnable(gl.GL_LIGHTING());
         gl.glEnable(gl.GL_LIGHT0());
@@ -113,12 +105,14 @@ public class DemoTeapot_Onscreen_macOS_AWT {
       }
 
       public void display(GL gl) {
-        gl.glClearColor(0f, 0f, 0f, 1f);
-
+        // Reset Background
+        gl.glClearColor(1f, 1f, 1f, 1f);
         gl.glClear(gl.GL_COLOR_BUFFER_BIT() | gl.GL_DEPTH_BUFFER_BIT());
+
         gl.glPushMatrix();
         gl.glRotatef(-20f, 1f, 1f, 0f);
         gl.glRotatef(rot, 0f, 1f, 0f);
+        gl.glColor3f(0.2f, 0.2f, 1f);
         gl.glutSolidTeapot(0.5d);
         gl.glPopMatrix();
 
